[package]
name = "rs-vless"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
tracing.workspace = true

tls.path = "crates/tls"
crypt.path = "crates/crypt"
asn1.path = "crates/asn1"
utils.path = "crates/utils"

tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
num-bigint = "0.4.6"
rand = "0.9.2"
hex-literal = "1.1.0"

[lints]
workspace = true

[workspace]
members = [".", "crates/*"]

[workspace.dependencies]
anyhow = { version = "1.0.100", features = ["backtrace"] }
tracing = "0.1.41"

[workspace.lints.clippy]
print_stdout = "warn"
unwrap_used = "warn"
missing_errors_docs = "allow"
new_without_default = "allow"
