[package]
name = "tls"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
tracing.workspace = true

crypt.path = "../crypt"
utils.path = "../utils"

thiserror = "2.0.17"
hex-literal = "1.1.0"

# Feature: server
asn1 = { path = "../asn1", optional = true }
rand = { version = "0.9.2", optional = true }

# Feature: trace
strum = { version = "0.27.2", optional = true }
strum_macros = { version = "0.27.2", optional = true }

[features]
default = ["full"]
full = ["server", "trace"]

trace = ["dep:strum", "dep:strum_macros"]
server = ["dep:asn1", "dep:rand"]

[lints]
workspace = true
